--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -12,6 +12,7 @@
             Witam {{ user.username }}<br>
             <a class="btn btn-primary btn" href="{% url 'logout' %}">logout</a>
           {% else %}
+          Movie Rater App
             <a class="btn btn-primary btn" href="{% url 'login' %}">login</a>
           {% endif %}
 
