--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -38,8 +38,8 @@
                               <h2>{{film}}</h2>
                           </div>
                           <div class="col-sm-3">
-                              <a href="{% url 'edytuj_film' film.id %}"><i class="fas fa-2x fa-edit"></i></a>
-                              <a href="{% url 'usun_film' film.id %}"><i class="fas fa-2x fa-trash-alt"></i></a>
+                              <a href="{% url 'edytuj_film' film.id %}"><i class="fas fa-edit"></i></a>
+                              <a href="{% url 'usun_film' film.id %}"><i class="fas fa-trash-alt"></i></a>
                           </div>
                       </div>
                       <div class="row">
