--- a/templates/glowny.html
+++ b/templates/glowny.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'moj.css' %}">
+    <link rel="stylesheet" type='text/css' href="{% static 'moj.css' %}">
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
