aws serwer works fine

--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -1,6 +1,6 @@
 {% extends 'glowny.html' %}
 {% load bootstrap %}
-
+{% load static %}
  {% block title %} Lista filmow {% endblock %}
 
 {% block body %}
