aws config changes

--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -32,7 +32,7 @@
 
               <div class="card-body">
 
-                  <img src="/media/{{film.photo}}">
+                  <img src="{{ film.photo.url }}">
 
                       <div class="row">
                           <div class="col-sm-9">
