changes in css, add New Movie button

--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -24,7 +24,9 @@
     </div>
 
 
-    <a href="{% url 'nowy_film' %}">Nowy film <i class="fas fa-plus-circle"></i></a>
+    <a href="{% url 'nowy_film' %}"><i class="btn btn-secondary btn-lg btn-block"
+                                   style="width: 700px; margin-bottom:10px;">+ Nowy film</i></button>
+
 
         {% for film in filmy %}
 
