--- a/templates/potwierdz.html
+++ b/templates/potwierdz.html
@@ -1,6 +1,6 @@
 {% extends 'glowny.html' %}
 
-{% block title %} Potwierdz {% endblock %}
+{% block title %} Potwierdź usunięcie {% endblock %}
 
 {% block body  %}
 
