change +button color

--- a/main/static/moj.css
+++ b/main/static/moj.css
@@ -36,3 +36,11 @@ h3 {
     margin-bottom: 20px;
     width:700px;
 }
+
+.grey-background
+    {background-color:#a6a6a6;
+}
+
+.white {
+    color:#ffffff;
+}
