--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -29,7 +29,7 @@
     </div>
 
 
-    <a href="{% url 'nowy_film' %}" class="btn btn-secondary btn-lg btn-block" style=
+    <a href="{% url 'nowy_film' %}" class="btn btn-secondary grey-background white btn-lg btn-block" style=
             "width: 700px; margin-bottom:10px;"><i class="fas fa-plus-square" style=
             "margin-right: 10px"></i> Dodaj film <i class="fas fa-plus-square" style=
             "margin-left: 10px"></i></a>
