css changes, add navbar

--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -5,8 +5,21 @@
 
 {% block body %}
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Features</a>
+          <a class="nav-item nav-link" href="#">Pricing</a>
+          <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </div>
+      </div>
+    </nav>
 
-    <a class="btn btn-light" href="{% url 'admin:index' %}"><i class="fas fa-users-cog"></i> Admin</a>
 
     <div class="jumbotron">
       <h1 class="display-4">
@@ -14,6 +27,7 @@
 
               Witam, {{ user.username }}
             <a class="btn btn-light btn-lg" href="{% url 'logout' %}" style="margin-left: 30px">Wyloguj się</a>
+            <a class="btn btn-light" href="{% url 'admin:index' %}"><i class="fas fa-users-cog"></i> Admin</a>
 
           {% else %}
 
@@ -30,8 +44,8 @@
     </div>
 
 
-    <a href="{% url 'nowy_film' %}" class="btn btn-secondary grey-background white btn-lg btn-block" style=
-            "width: 700px; margin-bottom:10px;"><i class="fas fa-plus-square" style=
+    <a href="{% url 'nowy_film' %}" class="btn btn-secondary grey-background white btn-lg btn-block">
+            <i class="fas fa-plus-square" style=
             "margin-right: 10px"></i> Dodaj film <i class="fas fa-plus-square" style=
             "margin-left: 10px"></i></a>
 
