--- a/main/static/moj.css
+++ b/main/static/moj.css
@@ -1,5 +1,4 @@
 body {
-    padding: 50px;
     background-color: #cccccc;
 }
 
@@ -9,7 +8,7 @@ img {
 }
 
 .card {
-    width: 700px;
+    width: 800px;
 }
 
 .desc {
@@ -18,6 +17,8 @@ img {
 
 .jumbotron {
     background-color: #a6a6a6;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 h1 {
@@ -34,7 +35,9 @@ h3 {
 
 .card {
     margin-bottom: 20px;
-    width:700px;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .grey-background
@@ -43,4 +46,15 @@ h3 {
 
 .white {
     color:#ffffff;
+}
+
+.navbar {
+    margin-bottom: 20px;
+}
+
+.btn-block {
+    width: 800px;
+    margin-bottom:10px;
+    margin-left: auto;
+    margin-right:auto;
 }
