css changes new

--- a/templates/potwierdz.html
+++ b/templates/potwierdz.html
@@ -10,8 +10,8 @@
 
     <form method="post">
         {% csrf_token %}
-            <a href="{% url 'wszystkie_filmy' %}" style="color: #FDF3CF; margin-left: 10px">Cofnij
-                <i class="fas fa-arrow-circle-left" style="color:#FDF3CF"></i>
+            <a href="{% url 'wszystkie_filmy' %}" style="color: #fef9e7; margin-left: 50px">Cofnij
+                <i class="fas fa-arrow-circle-left" style="color:#fef9e7"></i>
             <button type="submit" class="btn btn-light" style="margin-left: 10px">Tak <i class="fas fa-trash-alt"></i></button>
     </form>
 
