--- a/templates/glowny.html
+++ b/templates/glowny.html
@@ -13,20 +13,33 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Movie Rater App</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Features</a>
-          <a class="nav-item nav-link" href="#">Pricing</a>
-          <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-item nav-link active" href="{% url 'wszystkie_filmy' %}">Strona główna
+              <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="{% url 'nowy_film' %}">Dodaj film</a>
+          <a class="nav-item nav-link" href="https://github.com/Sonny-skyez" target="_blank"
+             rel="noopener noreferrer">GitHub</a>
+          <a class="nav-item nav-link" href="https://github.com/Sonny-skyez/Movierater-Django_2.0"
+             target="_blank" rel="noopener noreferrer">Code!</a>
+          <a class="nav-item nav-link" href="https://www.linkedin.com/in/krzysztof-brymer/"
+             target="_blank" rel="noopener noreferrer">LinkedIn</a>
+          <a class="nav-item nav-link active" href="https://polls-application.herokuapp.com/polls/" target="_blank"
+             rel="noopener noreferrer">Polls project</a>
+          <a class="nav-item nav-link" href="{% url 'admin:index' %}" style="position: absolute; right: 15px">
+              Admin</a>
         </div>
       </div>
     </nav>
+
     {% block body %} {% endblock %}
+
 </body>
 </html>
