--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -11,21 +11,22 @@
           {% if user.is_authenticated %}
 
               Witam, {{ user.username }}
-            <a class="btn btn-light btn-lg" href="{% url 'logout' %}" style="margin-left: 30px">Wyloguj się</a>
-            <a class="btn btn-light" href="{% url 'admin:index' %}"><i class="fas fa-users-cog"></i> Admin</a>
+            <a class="btn btn-light btn-lg" href="{% url 'logout' %}" style="padding: 15px; color: #8c8c8c">
+                Wyloguj się</a>
 
           {% else %}
 
             Movie Rater App
-            <a class="btn btn-light btn-lg" href="{% url 'login' %}" style="margin-left: 30px">Zaloguj się</a>
+            <a class="btn btn-light btn-lg" href="{% url 'login' %}" style="padding: 15px; color: #8c8c8c">
+                Zaloguj się</a>
 
           {% endif %}
 
       </h1>
         <hr class="my-3">
-        <h2>Aplikacja służąca do dodawania pozycji filmowych wraz z ich recenzją/opisem, datą premiery
-            oraz artworkami! Have fun!
-        </h2>
+        <h3 style="color: #666666">Aplikacja służąca do dodawania pozycji filmowych wraz z ich recenzją/opisem,
+            datą premiery oraz artworkami - które przechowywane są na serverze S3 Amazona.<br>Have fun!
+        </h3>
     </div>
 
 
