--- a/templates/film_form.html
+++ b/templates/film_form.html
@@ -12,8 +12,8 @@
         <form role="role" method= "post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|bootstrap }}
-            <a href="{% url 'wszystkie_filmy' %}">Cofnij  <i class="fas fa-arrow-circle-left"></i>
-            <button type="submit" class="btn btn-primary">Zapisz  <i class="fas fa-plus-circle"></i></button>
+            <a href="{% url 'wszystkie_filmy' %}" style="color: #666666">Cofnij  <i class="fas fa-arrow-circle-left" style="color: #666666"></i>
+            <button type="submit" class="btn btn-light grey-background white" style="margin-left: 10px">Zapisz <i class="fas fa-plus-circle"></i></button>
 
         </form>
       </div>
