--- a/templates/glowny.html
+++ b/templates/glowny.html
@@ -39,7 +39,144 @@
       </div>
     </nav>
 
+
     {% block body %} {% endblock %}
+
+
+    <!-- Footer -->
+    <footer class="page-footer font-small unique-color-dark" style="background-color: #a6a6a6; margin-top: 30px">
+
+      <div style="background-color: #FCC127;">
+        <div class="container">
+
+          <!-- Grid row-->
+          <div class="row py-4 d-flex align-items-center">
+
+            <!-- Grid column -->
+            <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+              <h6 class="mb-0">Zapraszam do kontaktu w social mediach:</h6>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-6 col-lg-7 text-center text-md-right">
+
+              <!-- GitHub -->
+              <a class="fb-ic" href="https://github.com/Sonny-skyez" style="color: black" target="_blank"
+                 rel="noopener noreferrer">
+                  <i class="fab fa-github white-text mr-4" ></i>
+              </a>
+              <!--Linkedin -->
+              <a class="li-ic" href="https://www.linkedin.com/in/krzysztof-brymer/" style="color: black"
+                 target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-linkedin-in white-text mr-4"></i>
+              </a>
+              <!--Instagram-->
+              <a class="ins-ic" href="https://www.instagram.com/ponury_szalbierca/" style="color: black"
+                 target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-instagram white-text"></i>
+              </a>
+
+            </div>
+            <!-- Grid column -->
+
+          </div>
+          <!-- Grid row-->
+
+        </div>
+      </div>
+
+      <!-- Footer Links -->
+      <div class="container text-center text-md-left mt-5">
+
+        <!-- Grid row -->
+        <div class="row mt-3">
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+            <!-- Content -->
+            <h6 class="text-uppercase font-weight-bold">O autorze</h6>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <p>Jestem młodym programistą-hobbistą szukającym obecnie pracy jako Junior Python Developer / Software Tester.</p>
+
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+            <!-- Links -->
+            <h6 class="text-uppercase font-weight-bold">Portfolio</h6>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <p>
+              <a class="footer_links" href="https://polls-application.herokuapp.com/polls/" target="_blank" rel="noopener noreferrer">
+                Polls project</a>
+            </p>
+            <p>
+              <a class="footer_links" href="https://github.com/Sonny-skyez/Py.test_-_Twitter_with_unittests" target="_blank" rel="noopener noreferrer">
+                Twitter with tests</a>
+            </p>
+            <p>
+              <a class="footer_links" href="https://github.com/Sonny-skyez/CSV_Report_Processing" target="_blank" rel="noopener noreferrer">
+                Report processing</a>
+            </p>
+
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+            <!-- Links -->
+            <h6 class="text-uppercase font-weight-bold">Linki</h6>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <p>
+              <a class="footer_links" href="{% url 'wszystkie_filmy' %}">Strona główna</a>
+            </p>
+            <p>
+              <a class="footer_links" href="https://www.wykop.pl/">Wykop.pl</a>
+            </p>
+            <p>
+              <a class="footer_links" href="https://intl.startrek.com/">Star Trek Official</a>
+            </p>
+
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+            <!-- Links -->
+            <h6 class="text-uppercase font-weight-bold">Kontakt</h6>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <p>
+              <i class="fas fa-home mr-3"></i> Sosnowiec, 41-208 PL</p>
+            <p>
+              <i class="fas fa-envelope mr-3"></i> krzysztof.brymer@gmail.com</p>
+            <p>
+              <i class="fas fa-phone mr-3"></i> + 48 510 290 018</p>
+
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+      </div>
+      <!-- Footer Links -->
+
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2019 Copyright:
+        <a class="c_footer" href="https://github.com/Sonny-skyez" target="_blank" rel="noopener noreferrer">
+          Krzysztof Brymer</a>
+      </div>
+      <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
+
+
 
 </body>
 </html>
