complete app, added minor changes

--- a/templates/glowny.html
+++ b/templates/glowny.html
@@ -44,7 +44,7 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer font-small unique-color-dark" style="background-color: #a6a6a6; margin-top: 30px">
+    <footer class="page-footer font-small unique-color-dark" style="background-color: #8c8c8c; margin-top: 30px">
 
       <div style="background-color: #FCC127;">
         <div class="container">
@@ -98,7 +98,8 @@
             <!-- Content -->
             <h6 class="text-uppercase font-weight-bold">O autorze</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-            <p>Jestem młodym programistą-hobbistą szukającym obecnie pracy jako Junior Python Developer / Software Tester.</p>
+            <p>Jestem programistą-hobbistą poszukującym pracy jako:<br>Junior Python Developer /<br>
+              Software Tester.</p>
 
           </div>
           <!-- Grid column -->
@@ -110,15 +111,18 @@
             <h6 class="text-uppercase font-weight-bold">Portfolio</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <a class="footer_links" href="https://polls-application.herokuapp.com/polls/" target="_blank" rel="noopener noreferrer">
+              <a class="footer_links" href="https://polls-application.herokuapp.com/polls/" target="_blank"
+                 rel="noopener noreferrer">
                 Polls project</a>
             </p>
             <p>
-              <a class="footer_links" href="https://github.com/Sonny-skyez/Py.test_-_Twitter_with_unittests" target="_blank" rel="noopener noreferrer">
+              <a class="footer_links" href="https://github.com/Sonny-skyez/Py.test_-_Twitter_with_unittests"
+                 target="_blank" rel="noopener noreferrer">
                 Twitter with tests</a>
             </p>
             <p>
-              <a class="footer_links" href="https://github.com/Sonny-skyez/CSV_Report_Processing" target="_blank" rel="noopener noreferrer">
+              <a class="footer_links" href="https://github.com/Sonny-skyez/CSV_Report_Processing"
+                 target="_blank" rel="noopener noreferrer">
                 Report processing</a>
             </p>
 
@@ -132,13 +136,16 @@
             <h6 class="text-uppercase font-weight-bold">Linki</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <a class="footer_links" href="{% url 'wszystkie_filmy' %}">Strona główna</a>
+              <a class="footer_links" href="{% url 'wszystkie_filmy' %}" id="scroll-to-bottom">
+                Góra strony</a>
             </p>
             <p>
-              <a class="footer_links" href="https://www.wykop.pl/">Wykop.pl</a>
+              <a class="footer_links" href="https://intl.startrek.com/" target="_blank"
+                 rel="noopener noreferrer">Star Trek Official</a>
             </p>
             <p>
-              <a class="footer_links" href="https://intl.startrek.com/">Star Trek Official</a>
+              <a class="footer_links" href="https://www.wykop.pl/" target="_blank" rel="noopener noreferrer">
+                Wykop.pl</a>
             </p>
 
           </div>
@@ -151,7 +158,7 @@
             <h6 class="text-uppercase font-weight-bold">Kontakt</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <i class="fas fa-home mr-3"></i> Sosnowiec, 41-208 PL</p>
+              <i class="fas fa-home mr-3"></i> Sosnowiec, 41-208, PL</p>
             <p>
               <i class="fas fa-envelope mr-3"></i> krzysztof.brymer@gmail.com</p>
             <p>
