changes in Main Page link in footer

--- a/templates/glowny.html
+++ b/templates/glowny.html
@@ -137,8 +137,8 @@
             <h6 class="text-uppercase font-weight-bold">Linki</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <a class="footer_links" href="{% url 'wszystkie_filmy' %}" id="scroll-to-bottom">
-                Góra strony</a>
+              <a class="footer_links" href="{% url 'wszystkie_filmy' %}">
+                Strona główna</a>
             </p>
             <p>
               <a class="footer_links" href="https://intl.startrek.com/" target="_blank"
