--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -59,6 +59,10 @@
 
                       </div>
 
+                      <div class="row" style="padding-right: 40px">
+                            <p class="reccomend" style="margin-left: auto; margin-right: 10px; font-size: 25px; font-weight: bold; color: #c99103">{{ film.reccomendation }}</p>
+                      </div>
+
               </div>
         </div>
 
