--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -60,7 +60,9 @@
                       </div>
 
                       <div class="row" style="padding-right: 40px">
-                            <p class="reccomend" style="margin-left: auto; margin-right: 10px; font-size: 25px; font-weight: bold; color: #c99103">{{ film.reccomendation }}</p>
+                          <p class="reccomend">{{ film.reccomendation }}</p>
+
+
                       </div>
 
               </div>
