--- a/main/static/moj.css
+++ b/main/static/moj.css
@@ -1,5 +1,8 @@
-body {
+html, body {
     background-color: #cccccc;
+    height: 100%;
+    width: 100%;
+    margin: 0;
 }
 
 img {
@@ -8,7 +11,7 @@ img {
 }
 
 .card {
-    width: 800px;
+    width: 100%;
 }
 
 .desc {
@@ -33,11 +36,14 @@ h3 {
     color: black;
 }
 
+.container {
+    width: 70%;
+    margin: auto;
+
+}
+
 .card {
     margin-bottom: 20px;
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .grey-background {
