--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -30,10 +30,13 @@
     </div>
 
 
-    <a href="{% url 'nowy_film' %}" class="btn btn-warning btn-lg btn-block">
-            <i class="fas fa-plus-square" style=
-            "margin-right: 10px"></i> Dodaj film <i class="fas fa-plus-square" style=
-            "margin-left: 10px"></i></a>
+
+    <div class="container">
+
+        <a href="{% url 'nowy_film' %}" class="btn btn-warning btn-lg btn-block">
+        <i class="fas fa-plus-square" style=
+        "margin-right: 10px"></i> Dodaj film <i class="fas fa-plus-square" style=
+        "margin-left: 10px"></i></a>
 
 
         {% for film in filmy %}
@@ -69,5 +72,8 @@
         </div>
 
         {% endfor %}
+
+
+    </div>
 
 {% endblock %}
